After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 673936 - local-metadata: Don't leave unfinished calls
local-metadata: Don't leave unfinished calls
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
git master
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2012-04-11 18:28 UTC by Bastien Nocera
Modified: 2012-04-13 15:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
local-metadata: Don't leave unfinished calls (3.75 KB, patch)
2012-04-11 18:28 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2012-04-11 18:28:27 UTC
.
Comment 1 Bastien Nocera 2012-04-11 18:28:28 UTC
Created attachment 211868 [details] [review]
local-metadata: Don't leave unfinished calls

It was possible to hang an application that would have been
waiting for metadata because of us not calling the callback
in some cases.

We must make sure to either have async calls ongoing from which
the callback will be called, or call the callback straight away.

Fixes grilo-test-ui hanging when browsing large UPnP containers
full of videos to parse.
Comment 2 Juan A. Suarez Romero 2012-04-13 15:44:07 UTC
Review of attachment 211868 [details] [review]:

Let's push it
Comment 3 Bastien Nocera 2012-04-13 15:49:38 UTC
Attachment 211868 [details] pushed as 098baeb - local-metadata: Don't leave unfinished calls